# CudaSW

./: .gitignore  CMakeLists.txt  Makefile  README.md  launcher_build.sbatch  pyproject.toml  requirements.txt  setup.py
basic version/: GPU_version.cu  cpu_version.cpp  main.cu  sequence_generator.cpp  test.txt
benchmarks/: batch.py  benchmark.py  cpp_benchmark.cpp  launcher_compile.sbatch  launcher_cpp.sbatch  launcher_python.sbatch  launcher_streams.sbatch  main.cpp  new.py  python_benchmark.py  run_benchmark.py  streams_benchmark.cpp
include/cusw/: aligner.hpp
profile/: launcher_profiler.sbatch
profiling/: launcher_ncu.sbatch  launcher_nsys.sbatch  launcher_profiler.sbatch  profile_diagonal.py  profile_job.sh  profile_streams.py  profile_tiled.py
python/: bindings.cpp
src/: GPU_version.cu  aligner.cpp  cpu_version.cpp  gpu_basic_version.cu  gpu_opt_memory_version.cu  gpu_opt_version.cu  jetson-nano_version.cu  kernels.cu  kernels.cuh  launcher_basic.sbatch  launcher_opt.sbatch  launcher_sample.sbatch  main.cpp  opt_gpu_version.cu  profile_job.sh  sw_cpu.cpp  sw_cuda.h  sw_cuda_diagonal.cu  sw_cuda_o2m.cu  sw_cuda_tiled.cu
sw_cuda_py/: setup.py
sw_cuda_py/src/: bindings.cpp  sw_cuda.h  sw_cuda_diagonal.cu  sw_cuda_o2m.cu  sw_cuda_tiled.cu
